<resources>
    <string name="app_name">Cocktail Device</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text">到此为止：发现设备->枚举设备->找到设备的接口->连接设备->分配相应的端点，都已完成，下一步可以进行通讯处理。。祝你好运！</string>
    <string name="aa">枚举设备成功</string>
    <string name="dds">找到我的设备接口</string>
    <string name="dfads">打开设备成功</string>
    <string name="fdda">bulkIn返回输出为  负数</string>
    <string name="dfdzz">发送数据源</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="getScale">Get Scale</string>
    <string name="discoverable">Make discoverable</string>
    <string name="pleaseset">请输入登陆密码</string>
    <string name="passtrue">密码正确</string>
    <string name="passerror">密码错误</string>
    <string name="shurumima">请输入新的管理密码：</string>
    <string name="newalike">新增一个辅料</string>
    <string name="modifyas">修改辅料:</string>
    <string name="inputnan">请先填写酒名</string>
    <string name="nameisnull">名称不能为空</string>
    <string name="addas">新增一个装饰品</string>
    <string name="upddataeda">修改装饰品:</string>
    <string name="winename">酒名：\t</string>
    <string name="inpfads">请输入位置</string>
    <string name="daiuda">请输入纯数字，不要有其他字符</string>
    <string name="hdfsa">"请输入对应位置为： "</string>
    <string name="daskjj">" 的出酒时间"</string>
    <string name="dfhdasjkkj">请输入纯数字，不要有其他字符</string>
    <string name="fdsd">保存成功,可以继续编辑保存</string>
    <string name="dfddd">继续保存</string>
    <string name="wisfa">酒名</string>
    <string name="jkjkdas">杯型</string>
    <string name="jkjkc">成品预览</string>
    <string name="kjlkd">辅料</string>
    <string name="dsafdsv">装饰品</string>
    <string name="hgb">开始配酒</string>
    <string name="gdasasd">停止</string>
    <string name="pomfm">位置</string>
    <string name="djksjkasdkj">保存退出</string>
    <string name="jkdasjfkdls">出酒位置</string>
    <string name="dfdds">出酒时间(毫秒)</string>
    <string name="hkdshjks">新增</string>
    <string name="dkjlsaklasdkl">配置设备</string>
    <string name="lkklx">删除</string>
    <string name="hjsdakhfklsda">设置与修改</string>
    <string name="jkc">调酒</string>
    <string name="ocioico">配置</string>
    <string name="ciuioci">数量</string>
    <string name="cjjak">请输入登入密码</string>
    <string name="cvjahjkh">总杯数</string>
    <string name="clear">清零</string>
    <string name="cauiiudosio">停顿时间:</string>
    <string name="dfkjahvjkjdas">鸡尾酒新增与修改</string>
    <string name="cjkvcja">基酒参数设置</string>
    <string name="coijuaioiuods">管理密码修改</string>
    <string name="ckhyaisi">装饰品修改</string>
    <string name="cvoijioio">辅料修改</string>
    <string name="kjcjkiai">连接蓝牙设备</string>
    <string name="coioiasd">未连接</string>
    <string name="truefdsa">确认</string>
    <string name="slideset">滑轨参数设置</string>
    <string name="fdaxc">清除配方</string>
    <string name="jkdcokk">保存退出</string>
    <string name="vccadf">停顿时间设置:</string>
    <string name="vfdrerq">加速时间设置:</string>
    <string name="vfbbkjdfjkj">摇动速度设置:</string>
    <string name="cvjcfjjjfd">摇动距离设置:</string>
    <string name="vcjvcuju">摇动次数设置:</string>
    <string name="ckjcuijdjcf">运行速度设置:</string>
    <string name="kcvjcadjf">修改成功</string>
    <string name="vicicdkr">禁止配方\t</string>
    <string name="vckjkjcka">一键测试</string>
    <string name="cvvkjasjkkjdf">暂停/恢复</string>
    <string name="vbkjjka">返回</string>
    <string name="cdasdv">修改成功</string>
    <string name="vavcxzxd">一键测试</string>
    <string name="vccadrasear">暂停/恢复</string>
    <string name="dvfdsaioi">已禁止配方新增、修改、删除</string>
    <string name="vfavds">图距离:</string>
    <string name="dfdfd">确定</string>
    <string name="vdadsr">取消</string>
    <string name="vfasdfa">"位置 "</string>
    <string name="datrtat">测试页面</string>
    <string name="vdatgst">多杯点单</string>
    <string name="vatt">单位(毫秒)</string>
    <string name="dsatratt">开始下一杯</string>
    <string name="off">配方禁止 OFF</string>
    <string name="daststtttt">当前管理界面密码修改</string>
    <string name="dsattttvv">待添加</string>
</resources>
