<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    >
    <TextView
        android:text="@string/coioiasd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/connect_state"
        android:textColor="@color/white"
        />
    <Button
        android:text="@string/kjcjkiai"
        android:id="@+id/connect_device"
        android:background="@drawable/btn_rect_bg_gray"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="@dimen/btn_tt"
        />

    <Button
        android:layout_marginTop="50dp"
        android:text="@string/hgb"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="@dimen/btn_tt"
        android:textColor="@color/white"
        android:id="@+id/opendevice"
        android:background="@drawable/btn_rect_bg_gray"
        />

    <Button
        android:text="@string/dkjlsaklasdkl"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="@dimen/btn_tt"
        android:id="@+id/setting"
        android:background="@drawable/btn_rect_bg_gray"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        />
</LinearLayout>
