<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@drawable/bg"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.AppBarLayout
            android:id="@+id/id_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            >
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="?mfp_toolbar_theme"
                />
        </android.support.design.widget.AppBarLayout>
        <Button
            android:text="@string/dfkjahvjkjdas"
            android:layout_width="300dp"
            android:layout_height="@dimen/btn_tt"
            android:id="@+id/peifang_set"
            android:background="@drawable/btn_rect_bg_gray"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <Button
            android:text="@string/cjkvcja"
            android:layout_width="300dp"
            android:layout_height="@dimen/btn_tt"
            android:id="@+id/timeposition_set"
            android:background="@drawable/btn_rect_bg_gray"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <Button
            android:text="@string/ckhyaisi"
            android:layout_width="300dp"
            android:layout_height="@dimen/btn_tt"
            android:id="@+id/ornament_set"
            android:background="@drawable/btn_rect_bg_gray"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <Button
            android:text="@string/cvoijioio"
            android:layout_width="300dp"
            android:layout_height="@dimen/btn_tt"
            android:id="@+id/accessories_set"
            android:background="@drawable/btn_rect_bg_gray"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <Button
            android:text="@string/slideset"
            android:layout_width="300dp"
            android:layout_height="@dimen/btn_tt"
            android:id="@+id/slide_set"
            android:background="@drawable/btn_rect_bg_gray"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <Button
            android:text="@string/coijuaioiuods"
            android:layout_width="300dp"
            android:layout_height="@dimen/btn_tt"
            android:id="@+id/password_set"
            android:background="@drawable/btn_rect_bg_gray"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </LinearLayout>
</ScrollView>