<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    >
        <android.support.design.widget.AppBarLayout
            android:id="@+id/id_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="?mfp_toolbar_theme"
                />

        </android.support.design.widget.AppBarLayout>
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
    >

    <TextView
    android:text="@string/cvjahjkh"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/count_number"
        android:textSize="15sp"
        />
    <Button
    android:text="@string/clear"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/reset_count"
    android:background="@drawable/btn_rect_bg_gray"
    android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"
    />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_height="0dp"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/cvjcfjjjfd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText_yaodongjuli"
                android:layout_weight="2"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/vcjvcuju"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText_yaodongcishu"
                android:layout_weight="2"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/ckjcuijdjcf"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText_yunxingsudu"
                android:layout_weight="2"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_height="0dp"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/vfbbkjdfjkj"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText_yaodongsudu"
                android:layout_weight="2"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/vfdrerq"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText_jiasushijian"
                android:layout_weight="2"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/vccadf"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText_tingdunshijian"
                android:layout_weight="2"
                />
        </LinearLayout>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_slide_list"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_weight="4"
        android:layout_height="0dp"
        ></android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_height="0dp"
        >

        <Button
            android:text="@string/off"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/peifangjinzhi"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_rect_bg"
            />

        <Button
            android:text="@string/daststtttt"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/password_up"
            android:layout_marginLeft="40dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_rect_bg"
            android:layout_weight="1"
            android:textSize="15sp"
            />

        <Button
            android:text="Save and back"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_rect_bg"
            />
        <Button
            android:text="Back"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_rect_bg"
            />
    </LinearLayout>
</LinearLayout>
