<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp"
    android:gravity="center_vertical">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:id="@+id/relativelayout"
        >

        <TextView
            android:text="@string/wisfa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_tv"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            app:cardBackgroundColor="@color/bg_gray"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/card_view">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    android:text="@string/fdaxc"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:maxLines="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/clear_item"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="2px"
                    android:layout_height="match_parent"
                    android:background="@color/gray_1"
                    />
                <TextView
                    android:text="@string/jkdcokk"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:maxLines="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/save_item"
                    android:layout_weight="1" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/position_lin"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_tv"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp">

            <TextView
                android:text="@string/jkdasjfkdls"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:layout_weight="1" />

            <TextView
                android:text="@string/dfdds"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:layout_weight="1" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_below="@+id/position_lin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/much_lin"
                android:orientation="vertical" />
        </ScrollView>
    </RelativeLayout>
</android.support.v7.widget.CardView>