<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/id_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="?mfp_toolbar_theme"
            />

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/wisfa"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Name"
                    android:textStyle="bold"
                    android:id="@+id/name_tv"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="5dp"
                android:layout_weight="4"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jkjkdas"
                    android:textStyle="bold"
                    android:id="@+id/textView"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/image_glass"
                    android:scaleType="centerInside"
                    android:src="@drawable/background_logo"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <TextView
                    android:text="@string/kjlkd"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_rect_bg_gray"
                    android:weightSum="7"
                    >

                    <HorizontalScrollView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:scrollbars="none"
                        android:id="@+id/accessories_hor"
                        android:layout_weight="7"
                        >

                        <LinearLayout
                            android:id="@+id/accessories_lin"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                >
                <TextView
                    android:text="@string/dsafdsv"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_rect_bg_gray"
                    android:weightSum="7"
                    >
                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none"
                        android:id="@+id/ornament_hor"
                        android:layout_weight="7"
                        >

                        <LinearLayout
                            android:id="@+id/ornament_lin"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>
                </LinearLayout>
            </LinearLayout>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/transparent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:text="@string/hgb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/open_device"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:background="@drawable/btn_rect_bg_gray"
                        android:gravity="center"
                        />

                    <Button
                        android:text="@string/cvvkjasjkkjdf"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/stop_device"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/white"
                        android:background="@drawable/btn_rect_bg_gray"
                        android:gravity="center"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jkjkc"
                android:textStyle="bold"
                android:layout_margin="10dp"
                />
            <com.hwx.usbhost.usbhost.widget.MLImageView
                android:id="@+id/image_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:padding="25dp"
                android:layout_gravity="center"
                app:ml_border_color="@color/white"
                app:ml_border_width="2dp"
                app:ml_press_alpha="80"
                app:ml_press_color="@color/gray_1"
                app:ml_radius="15dp"
                app:ml_shape_type="rectangle"
                android:layout_margin="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>